# Image_Resize

./: CMakeLists.txt  README.md
Src/: main.cpp
